# rp2040_template

./: README.md
device/: Cargo.toml  boot_from_flash.ld  boot_from_ram.ld
device/.cargo/: config
device/bootloader/: boot2_w25q080.S  start.S
device/bootloader/boot2_helpers/: exit_from_boot2.S
device/src/: main.rs
uf2tool/: Cargo.toml
uf2tool/src/: main.rs
